[package]
name = "cargo-3pl"
version = "0.1.2"
description = "The easy way to ship dependency licenses with your Rust binaries"
repository = "https://github.com/ankane/cargo-3pl"
license = "MIT OR Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"

[dependencies.clap]
version = "4"
default-features = false
features = [
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
]

[profile.release]
codegen-units = 1
lto = true
strip = true
